# smart_poultry_esp32_V3

./: .gitignore  CMakeLists.txt  README.md  build_errors.txt  partitions.csv  sdkconfig
.github/workflows/: build.yml  release.yml
components/actuators/: CMakeLists.txt  Kconfig  actuator_manager.c  alarm.c  alarm.h  cooling_pad.c  cooling_pad.h  exhaust_fan.c  exhaust_fan.h  feeder.c  feeder.h  heater.c  heater.h  led_light.c  led_light.h  water_pump.c  water_pump.h
components/actuators/include/: actuator_definitions.h  actuator_manager.h
components/communication/: CMakeLists.txt  Kconfig  comm_manager.c  mqtt_client.c  mqtt_client.h  ota_update.c  wifi_manager.c
components/communication/include/: comm_manager.h
components/control/: CMakeLists.txt  Kconfig  control_manager.c  decision_algorithm.c  decision_algorithm.h  emergency_protocol.c  emergency_protocol.h  energy_optimizer.c  energy_optimizer.h  pid_controller.c  pid_controller.h  rules_engine.c  rules_engine.h
components/control/include/: control_manager.h
components/sensors/: CMakeLists.txt  Kconfig  acs712.c  acs712.h  bmp280.c  bmp280.h  dht22.c  dht22.h  ds18b20.c  ds18b20.h  hx711.c  hx711.h  ldr.c  ldr.h  mq135.c  mq135.h  mq2.c  mq2.h  mq7.c  mq7.h  pms5003.c  pms5003.h  sensor_manager.c  sgp30.c  sgp30.h  sound_sensor.c  sound_sensor.h  water_level.c  water_level.h
components/sensors/include/: sensor_manager.h
components/storage/: CMakeLists.txt  Kconfig  nvs_storage.c  storage_manager.c
components/storage/include/: storage_manager.h
components/system/: CMakeLists.txt  task_watchdog.c
components/system/include/: task_watchdog.h
main/: CMakeLists.txt  main.c
main/include/: main.h
